--- a/source/src/main/resources/static/addbook.html
+++ b/source/src/main/resources/static/addbook.html
@@ -3,7 +3,7 @@
 	    <meta charset="UTF-8">
 	</head>
 	<body>
-		책 추가하기<br>
+		책 추가하기 - 추가<br>
 		<form name="calc" method="GET" action="/insertbook">
 			책 제목 : <input type="text" name="name"><br>
 			ISBN : <input type="text" name="isbn"><br>
